xrefs complete in all but systems and users

--- a/modules/reference/pages/configuration/config-menu.adoc
+++ b/modules/reference/pages/configuration/config-menu.adoc
@@ -57,10 +57,6 @@ Download and install the latest [path]``rhncfg*`` packages:
 
 
 Installation of these packages can also be accomplished during bootstrapping if you enable [guimenu]``Configuration File Deployment`` on the [guimenu]``Details`` page of the activation key after creating that activation key.
-For more information about activation keys, see
-ifndef::env-github,backend-html5[]
-<<s3-sm-system-keys-manage>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#s3-sm-system-keys-manage, Activation Keys>>.
-endif::[]
+For more information about activation keys, see:
+xref:reference:systems/activation-keys.adoc#s3-sm-system-keys-manage[Managing Activation Keys]
+
