--- a/modules/reference/pages/navigation/navigation-search.adoc
+++ b/modules/reference/pages/navigation/navigation-search.adoc
@@ -1,10 +1,6 @@
 [[ref.webui.intro.quick_search]]
 = Search
 
-
-
-
-
 In the top bar, {productname} offers a search functionality for Packages, Patches (Errata), Documentation, and Systems.
 To use the search, click the magnifier, then select the search item (choose from [guimenu]``Systems``, [guimenu]``Packages``, [guimenu]``Documentation``, and [guimenu]``Patches``) and type a string to look for a name match.
 Click the btn:[Search] button.
@@ -23,31 +19,16 @@ If you add a distribution, newly synchronize channels, or register a system with
 To force the rebuild of the search index, enter [command]``rhn-search cleanindex`` on the command line and wait until the rebuild is finished.
 ====
 
-* For advanced System searches, refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.systems.search>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#ref.webui.systems.search, System searches>>.
-endif::[]
-* For advanced Patch or Errata searches, refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.patches.search>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-patches.adoc#ref.webui.patches.search, Patch or Errata search>>.
-endif::[]
-* For advanced Package searches, refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.channels.search>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-intro.adoc#ref.webui.channels.search,Package search >>.
-endif::[]
-* For advanced Documentation searches, refer to
-ifndef::env-github,backend-html5[]
-<<s2-sm-your-rhn-help-docsearch>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-help.adoc#s2-sm-your-rhn-help-docsearch, Documentation search>>.
-endif::[]
+* For advanced System searches, refer to:
+xref:reference:systems/advanced-search.adoc[Advanced Search]
+
+* For advanced Patch or Errata searches, refer to:
+xref:reference:patches/patches-advanced-search.adoc[Advanced Search for Patches]
+
+* For advanced Package searches, refer to:
+xref:reference:software/software-package-search.adoc[Package Search]
+
+//* For advanced Documentation searches, refer to:
+//TODO add missing reference:help/ search page content then update this link. Commenting out for 4.0-RC1 2019
+//<<reference-webui-help.adoc#s2-sm-your-rhn-help-docsearch, Documentation search>>.
+
