--- a/modules/reference/pages/patches/patch-details.adoc
+++ b/modules/reference/pages/patches/patch-details.adoc
@@ -1,10 +1,6 @@
 [[s3-sm-errata-details]]
 = Patch Details
 
-
-
-
-
 If you click the advisory of a patch in the [guimenu]``Relevant`` or [guimenu]``All`` pages, its [guimenu]``Patch Details`` page appears.
 This page is further divided into the following tabs:
 
@@ -19,14 +15,15 @@ This is followed by a description of the patch and the steps required to resolve
 
 Below the [guimenu]``Affected Channels`` label, all channels that contain the affected package are listed.
 Clicking a channel name displays the [guimenu]``Packages`` subtab of the [guimenu]``Channel Details`` page for that channel.
-Refer to <<s3-sm-channel-details>> for more information.
+Refer to xref:reference:patches/patch-details.adoc[Patch Details] for more information.
 
-Security updates list the specific vulnerability as tracked by http://cve.mitre.org.
+Security updates list the specific vulnerability as tracked by link:http://cve.mitre.org[].
 This information is listed below the [guimenu]``CVEs`` label.
 
-OVAL is an open vulnerability and assessment language promoted by Mitre, http://oval.mitre.org.
+OVAL is an open vulnerability and assessment language promoted by Mitre, link:http://oval.mitre.org[].
 Clicking the link below the [guimenu]``Oval`` label downloads this information to your system.
-More useful are the {suse} Update Advisories at https://www.suse.com/support/update/.
+
+More useful are the {suse} Update Advisories at link:https://www.suse.com/support/update/[].
 
 
 
@@ -43,8 +40,8 @@ Clicking the name of a package displays its [guimenu]``Package Details`` page.
 
 This page lists systems affected by the patches.
 You can apply updates here.
-(See <<s3-sm-apply-errata>>.) Clicking the name of a system takes you to its [guimenu]``System Details`` page.
-Refer to <<s3-sm-system-details>> for more information.
+(See xref:reference:patches/applying-patches.adoc[Applying Patches].) Clicking the name of a system takes you to its [guimenu]``System Details`` page.
+Refer to xref:reference:systems/system-details.adoc[System Details] for more information.
 
 To determine whether an update has been scheduled, refer to the [guimenu]``Status`` column in the affected systems table.
 Possible values are: N/A, Pending, Picked Up, Completed, and Failed.
