--- a/modules/reference/pages/patches/patches-menu.adoc
+++ b/modules/reference/pages/patches/patches-menu.adoc
@@ -20,8 +20,7 @@ Icons are used to identify the three types:
 * image:fa-bug.svg[Bug Fix Alert,scaledwidth=1.6em] -- Bug Fix Updates available, recommended
 * image:spacewalk-icon-enhancement.svg[Enhancement Alert,scaledwidth=1.4em] -- Enhancement Updates available, optional
 
-
 A summary of each patch is provided in list form displaying its type, advisory ID, synopsis (with the severity as a textual prefix in case of security updates, such as "`critical`", "`important`", "`moderate`", or "`low`"), number of affected systems in your network, and date updated.
 
-In addition, you may view patches by product line at the following location: http://download.suse.com/patch/psdb/.
-For more information on security updates, see https://www.suse.com/support/security/.
+In addition, you may view patches by product line at the following location: link:http://download.suse.com/patch/psdb/[].
+For more information on security updates, see link:https://www.suse.com/support/security/[].
