--- a/modules/reference/pages/schedule/action-chains.adoc
+++ b/modules/reference/pages/schedule/action-chains.adoc
@@ -1,23 +1,8 @@
 [[ref.webui.schedule.chains]]
 = Action Chains
 
-
-
-
-
-You can create action chains{mdash}or grouped actions{mdash}for example, in the menu:Main Menu[Software > Packages] or menu:Software[Packages] subtabs on a system details page (see
-
-
-pass:c[<<reference-webui-systems.adoc#s4-sm-system-details-errata, System Details Patches>>]
-
-or:
-
-pass:c[<<reference-webui-systems.adoc#s4-sm-system-details-packages, System Details Packages>>])
-
-or in the menu:Configuration[Deploy Files] subtab on a system details page (see
-
-pass:c[<<reference-webui-systems.adoc#s5-sdc-configuration-deploy-files, Configuration Deploy Files>>]).
-
+You can create action chains{mdash}or grouped actions{mdash}for example, in the menu:Main Menu[Software > Packages] or menu:Software[Packages] subtabs on a system details page (see: xref:reference:systems/system-details/sd-patches.adoc[SD Patches] or:
+xref:reference:systems/system-details/sd-packages.adoc[SD Packages]) or in the menu:Configuration[Deploy Files] subtab on a system details page (see xref:reference:systems/system-details/sd-configuration.adoc#sd-config-deploy-files[Deploy Files]).
 
 The following list of actions may be added to an action chain.
 These actions are supported on both traditional clients and Salt minions.
@@ -35,19 +20,13 @@ Schedulable actions are located under a systems, [guimenu]``System Details`` pag
 * menu:System Details[Configuration]
 * menu:Main Menu[Images > Build]
 
-
 image::schedule_action_chains.png[scaledwidth=80%]
-
 
 In the [guimenu]``Action Chain List`` you can click the label to view or edit an [guimenu]``Action Chain``.
 In the top right corner is the [guimenu]``delete action chain`` link.
-To add actions to an existing chain, pick up a "`chainable`" action (such as running a remote command) from a system details page (see
-ifndef::env-github,backend-html5[]
-<<s3-sm-system-details>>).
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#s3-sm-system-details, System Details>>).
-endif::[]
+To add actions to an existing chain, pick up a "`chainable`" action (such as running a remote command) from a system details page (see:
+xref:reference:systems/system-details.adoc[System Details]).
+
 Then check [guimenu]``Add to Action Chain`` and select an action chain from the drop-down box.
 Confirm with btn:[Schedule].
 
@@ -119,14 +98,8 @@ It displays the action type, scheduling administrator, earliest execution, and n
 ====
 Clicking the Patch Advisory takes you to the [guimenu]``Patch Details`` page.
 The Patch Advisory appears only if the action is a patch.
-Refer to
-ifndef::env-github,backend-html5[]
-<<s3-sm-errata-details>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-patches.adoc#s3-sm-errata-details, Patch Details>>.
-endif::[]
-for more information.
+Refer to:
+xref:reference:patches/patch-details.adoc[Patch Details] for more information.
 ====
 
 
@@ -136,14 +109,8 @@ for more information.
 
 List of systems on which the action has been successfully performed.
 Clicking a system name displays its [guimenu]``System Details`` page.
-Refer to
-ifndef::env-github,backend-html5[]
-<<s3-sm-system-details>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#s3-sm-system-details, System Details>>.
-endif::[]
-for more information.
+Refer to:
+xref:reference:systems/system-details.adoc[System Details] for more information.
 
 
 
@@ -153,14 +120,8 @@ for more information.
 List of systems on which the action is now being carried out.
 To cancel an action, select the system by marking the appropriate check box and click the btn:[Unschedule Action] button.
 Clicking a system name shows its [guimenu]``System Details`` page.
-Refer to
-ifndef::env-github,backend-html5[]
-<<s3-sm-system-details>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#s3-sm-system-details, System Details>>.
-endif::[]
-for more information.
+Refer to:
+xref:reference:systems/system-details.adoc[System Details] for more information.
 
 
 
@@ -170,14 +131,8 @@ for more information.
 List of systems on which the action has failed.
 It can be rescheduled here.
 Clicking a system name takes you to its [guimenu]``System Details`` page.
-Refer to
-ifndef::env-github,backend-html5[]
-<<s3-sm-system-details>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#s3-sm-system-details, System Details>>.
-endif::[]
-for more information.
+Refer to:
+xref:reference:systems/system-details.adoc[System Details] for more information.
 
 
 
