--- a/modules/reference/pages/software/channel-details.adoc
+++ b/modules/reference/pages/software/channel-details.adoc
@@ -1,10 +1,6 @@
 [[s4-sm-channel-details-details]]
 = Channel Details
 
-
-
-
-
 General information about the channel and its parent if applicable.
 This summary, description, and architecture is also displayed when clicking a channel.
 
@@ -41,13 +37,8 @@ image::channels_details_managers_channels.png[scaledwidth=80%]
 Real name and e-mail address are listed with the user names.
 Organization and Channel administrators can manage any channel.
 As a {productname} administrator you can change roles for specific users by clicking the name.
-For more information on user management and the [guimenu]``User Details`` page, see
-ifndef::env-github,backend-html5[]
-<<ref.webui.users>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-users.adoc#ref.webui.users, Users>>.
-endif::[]
+For more information on user management and the [guimenu]``User Details`` page, see:
+xref:reference:users/users-menu.adoc[Users].
 
 
 
@@ -60,13 +51,8 @@ image::channels_details_patches_channels.png[scaledwidth=80%]
 
 The list displays advisory types, names, summaries, and issue dates.
 Clicking an advisory name takes you to its [guimenu]``Patch Details`` page.
-for more information, see
-ifndef::env-github,backend-html5[]
-<<s3-sm-errata-details>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-patches.adoc#s3-sm-errata-details, Patch Details>>.
-endif::[]
+for more information, see:
+xref:reference:patches/patch-details.adoc[Patch Details].
 
 
 
@@ -93,13 +79,8 @@ The filter is case-insensitive.
 
 The list displays system names and their system type.
 Clicking a system name takes you to its [guimenu]``System Details`` page.
-For more information, see
-ifndef::env-github,backend-html5[]
-<<s3-sm-system-details>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#s3-sm-system-details, System Details>>.
-endif::[]
+For more information, see:
+xref:reference:systems/system-details.adoc[System Details].
 
 
 
@@ -111,10 +92,6 @@ This tab appears only for child channels.
 Use the check boxes to select the systems, then click the [guimenu]``Confirm`` and btn:[Subscribe] button on the bottom right-hand corner.
 You will receive a success message or be notified of any errors.
 This can also be accomplished through the [guimenu]``Channels`` tab of the [guimenu]``System Details`` page.
-For more information, see
-ifndef::env-github,backend-html5[]
-<<s3-sm-system-details>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#s3-sm-system-details, System Details>>.
-endif::[]
+For more information, see:
+xref:reference:systems/system-details.adoc[System Details].
+
