--- a/modules/reference/pages/software/manage-repositories.adoc
+++ b/modules/reference/pages/software/manage-repositories.adoc
@@ -1,10 +1,6 @@
 [[software.mgmt.repos]]
 = Manage Repositories
 
-
-
-
-
 == Repositories
 
 Add or manage custom or third-party package repositories and link the repositories to an existing channel.
@@ -14,7 +10,7 @@ To create a new repository click the [guimenu]``Create Repository`` link at the 
 The [guimenu]``Create Repository`` screen prompts you to enter a [guimenu]``Repository Label`` such as `sles-12-x86_64` and a [guimenu]``Repository URL``.
 You may enter URLs pointing to mirror lists or direct download repositories, then click btn:[Create Repository].
 Select the desired SSL certificate of authority, client certificate and key from the drop down list.
-SSL keys should be placed in ``http://EXAMPLE-MANAGER-FQDN.com/pub``.
+SSL keys should be placed in ``http://EXAMPLE-FQDN.com/pub``.
 
 To link the new repository to an existing software channel, select [guimenu]``Manage Software Channels`` from the left menu, then click the channel you want to link.
 In the channel's detail page, click the [guimenu]``Repositories`` subtab, then check the box next to the repository you want to link to the channel.
