--- a/modules/reference/pages/software/software-channel-list-filters.adoc
+++ b/modules/reference/pages/software/software-channel-list-filters.adoc
@@ -3,7 +3,6 @@
 
 
 
-
 [[s3-sm-channel-list-all]]
 == All
 
@@ -16,7 +15,7 @@ Links within this list go to different tabs of the [guimenu]``Software Channel D
 Clicking a channel name takes you to the [guimenu]``Details`` tab.
 Clicking the number of packages takes you to the [guimenu]``Packages`` tab.
 Clicking the number of systems takes you to the [guimenu]``Subscribed Systems`` tab.
-Refer to <<s3-sm-channel-details>> for details.
+Refer to: xref:reference:software/channel-details.adoc[Channel Details] for details.
 
 [IMPORTANT]
 .Package Count Update Change
