--- a/modules/reference/pages/systems/activation-keys.adoc
+++ b/modules/reference/pages/systems/activation-keys.adoc
@@ -10,13 +10,8 @@ System-specific activation keys created through the [guimenu]``Reactivation`` su
 ====
 
 For more information about Activation Keys, see
-ifndef::env-github,backend-html5[]
-<<bp.key.managment>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<bp_chap_activation_key_management.adoc#bp.key.managment, Activation Keys>>.
-endif::[]
-
+xref:client-configuration:creating-activation-keys.adoc[Creating Activation Keys]
+and: xref:client-configuration:client-and-activation-keys.adoc[Activation Keys]
 
 
 
@@ -64,12 +59,8 @@ Select the child channels you need (for example, the Tools child channel).
 . [guimenu]``Contact Method`` - Select how clients communicate with {productname}. [guimenu]``Default`` (Pull) waits for the client to check in. With [guimenu]``Push via SSH`` and [guimenu]``Push via SSH tunnel`` the server contacts the client via SSH (with or without tunnel) and pushes updates and actions, etc.
 +
 For more information about contact methods, see
-ifndef::env-github,backend-html5[]
-<<bp.systems.management>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<bp_chap_activation_key_management.adoc#bp.systems.management, Contact Methods>>.
-endif::[]
+xref:client-configuration:contact-methods.adoc[Contact Methods].
+
 
 . [guimenu]``Universal Default`` -- Select whether this key should be considered the primary activation key for your organization.
 +
