--- a/modules/reference/pages/systems/advanced-search.adoc
+++ b/modules/reference/pages/systems/advanced-search.adoc
@@ -3,9 +3,7 @@
 
 Carry out an [guimenu]``Advanced Search`` on your systems according to the following criteria: network info, hardware devices, location, activity, packages, details, DMI info, and hardware.
 
-
 image::systems_advanced_search.png[scaledwidth=80%]
-
 
 Refine searches using the [guimenu]``Field to Search`` drop-down box, which is set to [guimenu]``Name/Description`` by default.
 
@@ -15,7 +13,7 @@ Type the keyword, select the criterion to search by, use the radio buttons to sp
 To list all systems that do _not_ match the criteria, select the [guimenu]``Invert Result`` check box.
 
 The results appear at the bottom of the page.
-For details on how to use the resulting system list, refer to <<ref.webui.systems.systems>>.
+For details on how to use the resulting system list, refer to xref:reference:systems/systems-list.adoc[Systems List].
 
 [NOTE]
 ====
