--- a/modules/reference/pages/configuration/config-channels.adoc
+++ b/modules/reference/pages/configuration/config-channels.adoc
@@ -88,7 +88,7 @@ You can set the [guimenu]``Ownership`` via the [guimenu]``user name`` and [guime
 If the client has SELinux enabled, you can configure [guimenu]``SELinux contexts`` to enable the required file attributes (such as user, role, and file type).
 +
 If the configuration file includes a macro (a variable in a configuration file), enter the symbol that marks the beginning and end of the macro.
-For more information on using macros, see <<s3-sm-file-macros>>.
+For more information on using macros, see: xref:reference:configuration/files-locally-managed.adoc#s3-sm-file-macros[Including Macros in your Configuration Files]
 +
 Import Files:::
 To import files from other configuration channels, including any locally-managed channels, check the box to the left of any file you want to import.
