--- a/modules/reference/pages/configuration/files-centrally-managed.adoc
+++ b/modules/reference/pages/configuration/files-centrally-managed.adoc
@@ -4,13 +4,8 @@
 Centrally-managed files are available to multiple systems.
 Changing a file within a centrally-managed channel may result in changes to several systems.
 Locally-managed files supersede centrally-managed files.
-For more information about locally-managed files, see
-ifndef::env-github,backend-html5[]
-<<configuration-files-local>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-configuration.adoc#configuration-files-local, Locally-managed Files>>
-endif::[]
+For more information about locally-managed files, see:
+xref:reference:configuration/files-locally-managed.adoc[Locally Managed Configuration Files]
 
 This page lists all files currently stored in your central configuration channel.
 Click the [guimenu]``Path`` of a file to see its [guimenu]``Details`` tab.
