--- a/modules/reference/pages/navigation/systems-selected.adoc
+++ b/modules/reference/pages/navigation/systems-selected.adoc
@@ -1,17 +1,9 @@
 [[ref.webui.intro.systems_selected]]
 = Selected Systems
 
-
-
-
 On the menu:Main Menu[Systems > Overview] page, if you mark the check box next to a system, the [guimenu]``system selected`` number on the right area of the top bar increases.
-This number keeps track of the systems you have selected for use in the System Set Manager (SSM); for more information, see to
-ifndef::env-github,backend-html5[]
-<<ref.webui.systems.ssm>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#ref.webui.systems.ssm, Systems Set Manager>>.
-endif::[]
+This number keeps track of the systems you have selected for use in the System Set Manager (SSM); for more information, refer to:
+xref:reference:systems/ssm-menu.adoc[System Set Manager]
 
 At any time, it identifies the number of selected systems and provides the means to work (simultaneously) with an entire selection.
 Clicking the the rubber symbol ([guimenu]``Clear``) deselects all systems, while clicking the [guimenu]``system selected`` string ([guimenu]``Manage``) launches the System Set Manager with your selected systems in place.
