--- a/modules/reference/pages/patches/patches-advanced-search.adoc
+++ b/modules/reference/pages/patches/patches-advanced-search.adoc
@@ -1,10 +1,6 @@
 [[ref.webui.patches.search]]
 = Advanced Search for Patches
 
-
-
-
-
 The menu:Main Menu[Patches > Advanced Search] page allows you to search through patches by specific criteria.
 
 
@@ -23,7 +19,7 @@ kernel
 +
 Results will be grouped by advisory.
 For example, searching for 'kernel' returns all package names containing the string ``kernel``, grouped by advisory.
-* [guimenu]``CVE`` -- The name assigned to the security advisory by the Common Vulnerabilities and Exposures (CVE) project at http://cve.mitre.org. For example:
+* [guimenu]``CVE`` -- The name assigned to the security advisory by the Common Vulnerabilities and Exposures (CVE) project at link:http://cve.mitre.org[]. For example:
 +
 
 ----
