--- a/modules/reference/pages/salt/salt-keys.adoc
+++ b/modules/reference/pages/salt/salt-keys.adoc
@@ -1,22 +1,15 @@
 [[ref.webui.salt.keys]]
 = Keys
 
-
-
-
-
 The [guimenu]``Keys`` page provides a summary of your minions, including their names, fingerprints, state, and actions you may perform on them.
 
 Once you have pointed a minion to the {productname} server as its master within [replaceable]``/etc/salt/minion``, you can choose to accept or reject a minion from this page.
 Toggle the check mark or cross in the `actions` column.
 
-
 .Keys Overview
 image::onboarding.png[scaledwidth=80%]
 
-
 For more information about key handling and onboarding, see:
 
-
-pass:c[xref:<<quickstart3_chap_suma_keys_and_first_client.adoc#preparing.and.registering.clients.salt, Quickstart Key Handling>>]
+xref:client-configuration:clients-and-activation-keys.adoc[Activation Keys]
 
