--- a/modules/reference/pages/spacecmd/troubleshooting-spacecmd.adoc
+++ b/modules/reference/pages/spacecmd/troubleshooting-spacecmd.adoc
@@ -1,16 +1,11 @@
 [[troubleshooting.spacecmd]]
 = Troubleshooting spacecmd
 
-
-
-
-
 This section provides troubleshooting solutions when working with spacecmd
 
 == Creating a Distribution With spacecmd Sets Localhost Instead of FQDN
 
-
-The support article associated with this issue may be located at:https://www.suse.com/support/kb/doc/?id=7018627
+The support article associated with this issue may be located at link:https://www.suse.com/support/kb/doc/?id=7018627[]
 
 Situation::
 When creating a distribution with spacecmd it will  automatically set localhost as the server name instead of the FQDN of SUSE Manager.
