playbook branch rc1, entities rc1, doc release notes rc1

--- a/branding/pdf-resources/entities.adoc
+++ b/branding/pdf-resources/entities.adoc
@@ -17,11 +17,11 @@
 :susemgr: SUSE Manager
 :smr: SUSE Manager for Retail
 :uyuni: Uyuni
-:smrproductnumber: 4.0
+:smrproductnumber: RC1
 :slepos: SUSE Linux Enterprise Point of Service
 :susemgrproxy: SUSE Manager Proxy
-:productnumber: 4.0
-:docversion: 4.0
+:productnumber: RC1
+:docversion: RC1
 :saltversion: 2019.2.0
 :webui: Web UI
 :sles-version: 15
