Updates per feedback

--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -17,6 +17,8 @@ Fields marked as `TBD` are under consideration, and may or may not be supported 
 | {sle} 15 | {x86}_64, {ppc}, {ibmz}, ARM | &#2713; | &#2713;
 | {sle} 12 | {x86}_64, {ppc}, {ibmz}, ARM | &#2713; | &#2713;
 | {sle} 11 | {x86}, {x86}_64, {ipf}, IBM {ppc}, {ibmz} | &#2713; | &#2713;
+| {sls}-ES 7 | {x86}, {x86}_64 | &#2713; | &#2713;
+| {sls}-ES 6 | {x86}, {x86}_64 | &#2713; | &#2713;
 | {rhel} 8 | {x86}_64 | TBD | TBD
 | {rhel} 7 | {x86}_64 | &#2713; | &#2713;
 | {rhel} 6 | {x86}, {x86}_64 | &#2713; | &#2713;
@@ -25,7 +27,6 @@ Fields marked as `TBD` are under consideration, and may or may not be supported 
 | {opensuse} Leap 15.1 | {x86}_64 | &#2717; | &#2713;
 | {ubuntu} 16.04 | {x86}_64 | &#2717; | &#2713;
 | {ubuntu} 18.04 | {x86}_64 | &#2717; | &#2713;
-| Microsoft Windows 10 | {x86}_64 | TBD | TBD
 |===
 
 
