Initial content: add and edit

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -1,6 +1,6 @@
 [[monitoring]]
 = Monitoring
 
-{productname} supports third party monitoring with Icinga or Prometheus.
+{productname} supports third party system monitoring using Prometheus and Grafana.
 
-TBD ...
+TBD ... Something here about Icinga (maybe).
