--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -132,8 +132,10 @@ Prometheus metrics exporters can also be used on managed client systems.
 The packages are available from the {productname} client tools channels, and can be enabled and configured directly on the {productname} {webui}.
 Currently, two exporters are supported:
 
-  - golang-github-prometheus-node_exporter - Node exporter
-  - golang-github-wrouesnel-postgres_exporter - PostgreSQL exporter
+* Node exporter: [systemitem]``golang-github-prometheus-node_exporter``.
+See https://github.com/prometheus/node_exporter.
+* PostgreSQL exporter: [systemitem]``golang-github-wrouesnel-postgres_exporter``.
+See (https://github.com/wrouesnel/postgres_exporter.
 
 Installing and configuring exporters can be done using a Salt formula.
 
