Tuning: word fix

--- a/modules/administration/pages/tuning-largedeploys.adoc
+++ b/modules/administration/pages/tuning-largedeploys.adoc
@@ -7,7 +7,7 @@
 
 
 In the following sections find considerations about a big scale deployment.
-In this context, a big scale compromises 1000 minions or more.
+In this context, a big scale comprises 1000 minions or more.
 
 
 
