--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -99,8 +99,7 @@ Therefore do not be confused when logging in to your systems during migration; t
 IMPORTANT: Specify the database parameters using the same database parameters as the source system is recommended.
 At least, using the the same database credentials as when creating the source or original {productname} database is mandatory.
 
-. Enter your SCC credentials.
-After all the data has been gathered, {yast} will terminate.
+. After all the data has been gathered, {yast} will terminate.
 
 
 The actual migration will not start automatically but needs to be triggered manually as outlined in <<bp.sec.mgr.migration.performing>>.
