--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -6,7 +6,7 @@
 
 Supported operating systems for traditional and Salt clients are listed in this table.
 
-In this table, &#2713; indicates that clients running the operating system are supported by {scc}, and &#2717; indicates that it is not supported.
+In this table, &#2713; indicates that clients running the operating system are supported by {suse}, and &#2717; indicates that it is not supported.
 Fields marked as `TBD` are under consideration, and may or may not be supported at a later date.
 
 [[mgr.supported.clients]]
