--- a/modules/administration/pages/tuning-largedeploys.adoc
+++ b/modules/administration/pages/tuning-largedeploys.adoc
@@ -84,7 +84,8 @@ Keep the server monitored in order to identify possible issues early.
 ** Note that Salt master workers can consume significant amounts of RAM (typically about 70{nbsp}MB per worker). It is recommended to keep usage monitored when increasing this value and to do so in relatively small increments (eg. 20) until failures are no longer produced.
 * Increase the maximum heap memory for the search daemon to be able to index many minions. Set 4 GiB instead of the current default 512 MB: add [parameter]``rhn-search.java.maxmemory=4096`` in [path]``/etc/rhn/rhn.conf`` (affects background indexing only).
 * Consider disabling Taskomatic jobs, especially if the provided functionality is not used:
-** Disable daily comparison of configuration files. Click on menu:Admin[Task Schedules], then on the btn:[compare-configs-default] link, then on the btn:[Disable Schedule] button and finally on btn:[Delete Schedule].
+** Disable daily comparison of configuration files. 
+Click on menu:Admin[Task Schedules], then on the btn:[compare-configs-default] link, then on the btn:[Disable Schedule] button and finally on btn:[Delete Schedule].
 ** Disable hourly synchronization of Cobbler files. Click on menu:Admin[Task Schedules], then on the btn:[cobbler-sync-default] link, then on the btn:[Disable Schedule] button and finally on btn:[Delete Schedule].
 ** Disable daily run of Gatherer and Subscription Matcher. Click on menu:Admin[Task Schedules], then on the btn:[gatherer-matcher-default] link, then on the btn:[Disable Schedule] button and finally on btn:[Delete Schedule].
 
