--- a/modules/administration/pages/tuning-largedeploys.adoc
+++ b/modules/administration/pages/tuning-largedeploys.adoc
@@ -86,7 +86,8 @@ Keep the server monitored in order to identify possible issues early.
 * Consider disabling Taskomatic jobs, especially if the provided functionality is not used:
 ** Disable daily comparison of configuration files. 
 Click on menu:Admin[Task Schedules], then on the btn:[compare-configs-default] link, then on the btn:[Disable Schedule] button and finally on btn:[Delete Schedule].
-** Disable hourly synchronization of Cobbler files. Click on menu:Admin[Task Schedules], then on the btn:[cobbler-sync-default] link, then on the btn:[Disable Schedule] button and finally on btn:[Delete Schedule].
+** Disable hourly synchronization of Cobbler files. 
+Click on menu:Admin[Task Schedules], then on the btn:[cobbler-sync-default] link, then on the btn:[Disable Schedule] button and finally on btn:[Delete Schedule].
 ** Disable daily run of Gatherer and Subscription Matcher. Click on menu:Admin[Task Schedules], then on the btn:[gatherer-matcher-default] link, then on the btn:[Disable Schedule] button and finally on btn:[Delete Schedule].
 
 Note that increasing the number of Postgres connections will require more RAM, make sure the {productname} server is monitored and swap is never used.
